adding script to clean tomcat's work and conf dirs